--- a/src/main/App/Css/ChoiceBoxStyle.css
+++ b/src/main/App/Css/ChoiceBoxStyle.css
@@ -1,7 +1,8 @@
 .choice-box .context-menu {
     -fx-font-size: 17;
     -fx-pref-width: 325;
-    -fx-padding: 10;-fx-border-style: solid inside;
+    -fx-padding: 10;
+    -fx-border-style: solid inside;
     -fx-border-width: 1px;
     -fx-border-radius: 15px;
     -fx-border-color: #DDDDDD;
