--- a/src/main/App/Css/SelectAllCheckBoxStyle.css
+++ b/src/main/App/Css/SelectAllCheckBoxStyle.css
@@ -5,9 +5,8 @@
 .check-box > .box {
     -fx-padding: 5px;
     -fx-body-color: white;
-    -fx-background-color:
-            -fx-outer-border,
-            -fx-body-color;
+    -fx-background-color: -fx-outer-border,
+    -fx-body-color;
     -fx-border-radius: 3;
     -fx-border-color: #616161;
     -fx-outer-border: #cadbec;
@@ -18,7 +17,7 @@
 
 .check-box > .box > .mark {
     -fx-padding: 5px;
-    -fx-shape:"M14.596,2.055L12.455,0C9.687,2.884,6.011,6.714,5.158,7.602L2.055,4.624L0,6.765l5.242,5.037l0.003-0.004 l0.003,0.004L14.596,2.055z";
+    -fx-shape: "M14.596,2.055L12.455,0C9.687,2.884,6.011,6.714,5.158,7.602L2.055,4.624L0,6.765l5.242,5.037l0.003-0.004 l0.003,0.004L14.596,2.055z";
     -fx-scale-x: 1;
     -fx-scale-y: 1;
 }
