--- a/src/main/App/Css/ChoiceBoxStyle.css
+++ b/src/main/App/Css/ChoiceBoxStyle.css
@@ -1,3 +1,15 @@
+.choice-box {
+    -fx-background-color: WHITE;
+    -fx-border-color: #656565;
+    -fx-border-radius: 15px;
+    -fx-background-radius: 15px;
+    -fx-pref-width: 700;
+    -fx-pref-height: 20;
+}
+.choice-box > .label {
+    -fx-font-size: 17;
+    -fx-pref-height: 20;
+}
 .choice-box .context-menu {
     -fx-font-size: 17;
     -fx-pref-width: 325;
