--- a/src/main/App/Css/SearchField.css
+++ b/src/main/App/Css/SearchField.css
@@ -3,3 +3,7 @@
     -fx-background-repeat: no-repeat;
     -fx-background-position: right center;
 }
+#searchField:hover, #searchField:focused {
+    -fx-background-color: #f1f1f1;
+    -fx-cursor: hand;
+}
