--- a/src/main/App/Css/ImageContainer.css
+++ b/src/main/App/Css/ImageContainer.css
@@ -1,6 +1,7 @@
 .button {
     -fx-background-radius: 15px 0px 0px 15px;
     -fx-background-color: WHITE;
+    -fx-cursor: hand;
 }
 .button:focused, .button:hover {
     -fx-background-color: #00000022;
