--- a/src/main/App/Css/TagContainer.css
+++ b/src/main/App/Css/TagContainer.css
@@ -1,6 +1,7 @@
 .button {
     -fx-background-color: none;
     -fx-background-radius: 18px;
+    -fx-cursor: hand;
 }
 .button:focused, .button:hover {
     -fx-background-color: #f1f1f1;
