Make pdfcreator more readable and not as hardcoded

--- a/public/Components/PDFcreator.html
+++ b/public/Components/PDFcreator.html
@@ -106,7 +106,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li>Components.PDFcreator</li>
+<li>Components.PdfCreator</li>
 </ul>
 </li>
 </ul>
